# pipe-steps

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  DAG.md  DAG_analysis_01.md  DAG_prompts.md  DAG_prototypes_summary.md  DAG_similar_libraries.md  DAG_tradeoffs_2_vs_4.md  Makefile  README.md  README_batch.md  README_checkpoint.md  README_pipe.md  SETUP.md  dag_terminal_out.txt  pyproject.toml
.githooks/: pre-commit
.github/workflows/: main.yml  tag-release.yml  test.yml
prompts/: CLAUDE_001_SUMMARY.md  CLAUDE_002.md  CLAUDE_003.md  CLAUDE_004.md  GEMINI_001.md  GEMINI_002.md
prototypes/: README.md
prototypes/solution2_tags/: README.md  __init__.py  demo.py  example_steps.py  path_item_tagged.py  path_pipeline_tagged.py  path_step_tagged.py
prototypes/solution4_graph/: README.md  __init__.py  demo.py  example_steps.py  path_item_graph.py  path_pipeline_graph.py  path_step_graph.py
reviews/: REVIEW_001.md
src/collect/: __init__.py  collector.py  resource.py
src/pipe_steps/: __init__.py  add_column_batch_step.py  add_column_step.py  batch.py  checkpoint_pipeline.py  drop_nulls_batch_step.py  drop_nulls_step.py  filter_batch_step.py  filter_step.py  main.py  path_step.py  polars_step.py
src/pipe_steps/batch/: __init__.py  batch_pipeline.py  batch_step.py  frontier.py  main_batch.py
src/pipe_steps/checkpoint/: __init__.py  add_column_step.py  checkpoint_pipeline.py  drop_nulls_step.py
src/pipe_steps/path/: __init__.py  discover_files_step.py  filter_by_type_step.py  main_pipe.py  path_item.py  path_pipeline.py  path_step.py
test_data/: large_data.csv
test_files/: data1.csv  data2.csv  dataset.parquet  export.xlsx  readme.txt
test_files/archive/: backup.parquet  notes.txt  old_data.csv
tests/unit/: test_batch_pipeline.py  test_checkpoint_pipeline.py  test_example.py  test_path_pipeline.py
tests/unit/batch/: __init__.py  (+1 more)
(+4 files in other folders)
