[project]
name = "pipe-steps"
version = "0.1.0"
description = "Simple pipeline steps"
readme = "README.md"
authors = [
    { name = "Peter", email = "peter.lappo@smr.co.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "polars[openpyxl]>=1.35.2",
]

[project.scripts]
collect-package = "pipe_steps:main_ps"
batch-pipeline = "pipe_steps.main_batch:main"
path-pipeline = "pipe_steps.main_pipe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.package-data]
pipe_steps = ["py.typed"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "pyright",
    "typeguard",
    "isort",
    "black",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests/unit",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
[tool.pyright]
include = ["src/pipe_steps"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py312"]

